[package]
name = "gvdb-macros"
version = "0.1.2"
edition = "2021"
description = "Convenience macros for gvdb"
repository = "https://github.com/felinira/gvdb-rs-macros"
license = "LGPL-3.0-or-later"
keywords = [ "gvdb", "glib", "gresource", "compile-resources" ]
categories = [ "gui", "data-structures", "encoding" ]
exclude = [ ".idea" ]

[lib]
proc-macro = true

[dependencies]
gvdb = { version = "0.1.1", default-features = false, features = ["gresource"] }
proc-macro2 = "1.0.37"
litrs = "0.2.3"
quote = "1.0.18"
